--- a/src/mzscheme/Makefile.in
+++ b/src/mzscheme/Makefile.in
@@ -12,9 +12,6 @@ AR = @AR@
 ARFLAGS = @ARFLAGS@
 RANLIB = @RANLIB@
 
-# system name for installation
-INSTALLSYS = `$(srcdir)/../../bin/archsys`
-
 ################################################################################
 
 bin: 
@@ -222,7 +219,7 @@ cygwin-install:
 	($ICP) libmzscheme.@LIBSFX@ $(WLIBIDIR)/libmzscheme.@LIBSFX@
 	echo 'CC=gcc' > $(WBUILDINFO)
 	echo 'CFLAGS=@CFLAGS@ @OPTIONS@' >> $(WBUILDINFO)
-	echo 'LIBS=-lm  -lm  gmzwin.exp' >> $(WBUILDINFO)
+	echo 'LIBS=-lm gmzwin.exp' >> $(WBUILDINFO)
 
 config:
 	autoconf $(srcdir)/configure.in | mzscheme -qr $(srcdir)/clean_ac.ss > $(srcdir)/../configure
